fixed z-index issue.

--- a/src/containers/App/style.css
+++ b/src/containers/App/style.css
@@ -50,7 +50,7 @@
   padding-top: 60px;
   transition: .3s ease transform;
   transform: translateX(105%);
-  z-index: 9999;
+  z-index: 0;
 
   @media screen and (min-width: 670px) {
     z-index: 1;
